syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "ProfanityServiceProto";

service ProfanityService {
  rpc checkProfanity (ProfanityCheckRequest) returns (ProfanityCheckResponse) {}
}

message ProfanityCheckRequest {
  string text = 1;
  int64 postId = 2;
}

message ProfanityCheckResponse {
  bool isProfane = 1;
  string reason = 2;
}
